data/derived/sp14/progs/unify/prog4410.ml.out
Characters 91-123:
  a::((i+j+s+t)/10, (i+j+s+t) mod 10) in
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type ('c * 'd) list
